welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: illegal start of simple expression
                                    else{if(b==a! && c==a!){return 1}
                                                          ^redTicket:4: error: ')' expected but '}' found.
                                         else{return 0}}
                                                       ^